<resources>
    <string name="app_name">OperationTruckdriver</string>
    <string name="google_maps_key">AIzaSyA3Z3WwaTayS-xJebmX6JWqKSXuEDGPA5M</string>
    <string name="google_maps_roads_key">AIzaSyCphb1h4R5w63S2b-WpskO-fZnIAbo-djw</string>
    <!-- Strings related to login -->
    <string name="prompt_user_id">User ID</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_logo_placeholder">CompanyLogo</string>
    <string name="company_name">Company: %1$s</string>
    <string name="today_stats">Today\'s Stats:</string>
    <string name="scanning">scanning for devices…</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="pairTip"><![CDATA[Pair with devices in Settings > Bluetooth]]></string>
    <string name="miles">Miles</string>
    <string name="hours">Hours</string>
    <string name="start_trip">Start Trip</string>
    <string name="trip_review">Trip Review</string>
    <string name="vehicle">Vehicle</string>
    <string name="logout">Logout</string>
    <string name="start_city">Start City</string>
    <string name="end_city">End City</string>
    <string name="distance">Distance</string>
    <string name="total_time">Total Time</string>
    <string name="stops">Stops</string>
    <string name="mpg">MPG</string>
    <string name="avg_speed">Avg Speed</string>
    <string name="driver">Driver</string>
    <string name="verified">Verified</string>
    <string name="notate">Notate</string>
    <string name="details">Details</string>
    <string name="verify">Verify</string>
    <string name="trouble_codes">Trouble Codes:</string>
    <string name="oil_pressure">Oil Pressure</string>
    <string name="fuel_temp">Fuel Temp</string>
    <string name="engine_temp">Engine Temp</string>
    <string name="engine_hours">Engine Hours</string>
    <string name="engine_model">Engine Model</string>
    <string name="engine_make">Engine Make</string>
    <string name="vin">VIN</string>
    <string name="model">Model</string>
    <string name="make">Make</string>
    <string name="odometer">Odometer</string>
    <string name="end_trip">End Trip</string>
    <string name="trip_distance">Trip Distance</string>
    <string name="average_mpg">Average MPG</string>
    <string name="current_mpg">Current MPG</string>
    <string name="engine_rpm">Engine RPM</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_connected_to">Connected to: %s</string>
    <string name="title_connecting">Connecting</string>
    <string name="title_not_connected">Not connected</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_data">No Data</string>
</resources>
