<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/map_of_trip"
        android:src="@drawable/united_states_outline"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/map_of_trip"
        android:paddingLeft="25dp"
        android:id="@+id/tableLayout">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="150dp"
                android:text="@string/start_city"
                android:textSize="@dimen/trip_review_text_size" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="150dp"
                android:text="Chicago, IL"
                android:id="@+id/start_city"
                android:paddingLeft="18dp"
                android:textSize="@dimen/trip_review_text_size" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="150dp"
                android:text="@string/end_city"
                android:textSize="@dimen/trip_review_text_size" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="150dp"
                android:text="Indianapolis, IN"
                android:id="@+id/end_city"
                android:paddingLeft="18dp"
                android:textSize="@dimen/trip_review_text_size" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="150dp"
                android:text="@string/distance"
                android:textSize="@dimen/trip_review_text_size" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="150dp"
                android:text="160 mi"
                android:id="@+id/distance"
                android:paddingLeft="18dp"
                android:textSize="@dimen/trip_review_text_size" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="150dp"
                android:text="@string/total_time"
                android:textSize="@dimen/trip_review_text_size" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="150dp"
                android:text="2:40.00"
                android:id="@+id/total_time"
                android:paddingLeft="18dp"
                android:textSize="@dimen/trip_review_text_size" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="150dp"
                android:text="@string/stops"
                android:textSize="@dimen/trip_review_text_size" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="150dp"
                android:text="1"
                android:id="@+id/stops"
                android:paddingLeft="18dp"
                android:textSize="@dimen/trip_review_text_size" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="150dp"
                android:text="@string/mpg"
                android:textSize="@dimen/trip_review_text_size" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="150dp"
                android:text="3.5"
                android:id="@+id/mpg"
                android:paddingLeft="18dp"
                android:textSize="@dimen/trip_review_text_size" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="150dp"
                android:text="@string/avg_speed"
                android:textSize="@dimen/trip_review_text_size" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="150dp"
                android:text="57 mph"
                android:id="@+id/avg_speed"
                android:paddingLeft="18dp"
                android:textSize="@dimen/trip_review_text_size" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="150dp"
                android:text="@string/driver"
                android:textSize="@dimen/trip_review_text_size" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="150dp"
                android:text="Payden Beyer"
                android:id="@+id/driver_name"
                android:paddingLeft="18dp"
                android:textSize="@dimen/trip_review_text_size" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="150dp"
                android:text="@string/verified"
                android:textSize="@dimen/trip_review_text_size" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="150dp"
                android:text="No"
                android:id="@+id/verified"
                android:paddingLeft="18dp"
                android:textSize="@dimen/trip_review_text_size" />

        </TableRow>
    </TableLayout>

    <Button
        android:layout_width="@dimen/main_activity_button_size"
        android:layout_height="wrap_content"
        android:text="@string/notate"
        android:textSize="@dimen/trip_review_text_size"
        android:layout_marginLeft="15dp"
        android:layout_below="@+id/tableLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/button2" />

    <Button
        android:layout_width="@dimen/main_activity_button_size"
        android:layout_height="wrap_content"
        android:text="@string/details"
        android:textSize="@dimen/trip_review_text_size"
        android:id="@+id/button"
        android:layout_marginRight="15dp"
        android:layout_below="@+id/tableLayout"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="@dimen/main_activity_button_size"
        android:layout_height="wrap_content"
        android:text="@android:string/cancel"
        android:textSize="@dimen/trip_review_text_size"
        android:id="@+id/button3"
        android:layout_below="@+id/button2"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2" />

    <Button
        android:layout_width="@dimen/main_activity_button_size"
        android:layout_height="wrap_content"
        android:text="@string/verify"
        android:textSize="@dimen/trip_review_text_size"
        android:id="@+id/button4"
        android:layout_below="@+id/button"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button" />

</RelativeLayout>