<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--<ImageView-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:id="@+id/map_of_trip"-->
    <!--android:src="@drawable/united_states_outline"-->
    <!--android:layout_alignParentTop="true"-->
    <!--android:layout_alignParentLeft="true"-->
    <!--android:layout_alignParentStart="true"-->
    <!--android:paddingTop="10dp"-->
    <!--android:paddingBottom="10dp"/>-->
    <FrameLayout
        android:id="@+id/map_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

    </FrameLayout>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/map_fragment_container"
        android:paddingLeft="25dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="@dimen/trip_review_text_view_size"
                android:layout_height="wrap_content"
                android:text="@string/start_city"
                android:textSize="@dimen/default_text_size" />

            <TextView
                android:id="@+id/start_city"
                android:layout_width="@dimen/trip_review_text_view_size"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/trip_review_text_left_pad"
                android:text="Chicago, IL"
                android:textSize="@dimen/default_text_size" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="@dimen/trip_review_text_view_size"
                android:layout_height="wrap_content"
                android:text="@string/end_city"
                android:textSize="@dimen/default_text_size" />

            <TextView
                android:id="@+id/end_city"
                android:layout_width="@dimen/trip_review_text_view_size"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/trip_review_text_left_pad"
                android:text="Indianapolis, IN"
                android:textSize="@dimen/default_text_size" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="@dimen/trip_review_text_view_size"
                android:layout_height="wrap_content"
                android:text="@string/distance"
                android:textSize="@dimen/default_text_size" />

            <TextView
                android:id="@+id/tripReview_distance"
                android:layout_width="@dimen/trip_review_text_view_size"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/trip_review_text_left_pad"
                android:text="160 mi"
                android:textSize="@dimen/default_text_size" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="@dimen/trip_review_text_view_size"
                android:layout_height="wrap_content"
                android:text="@string/total_time"
                android:textSize="@dimen/default_text_size" />

            <TextView
                android:id="@+id/tripReview_time"
                android:layout_width="@dimen/trip_review_text_view_size"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/trip_review_text_left_pad"
                android:text="2:40.00"
                android:textSize="@dimen/default_text_size" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="@dimen/trip_review_text_view_size"
                android:layout_height="wrap_content"
                android:text="@string/stops"
                android:textSize="@dimen/default_text_size" />

            <TextView
                android:id="@+id/tripReview_stops"
                android:layout_width="@dimen/trip_review_text_view_size"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/trip_review_text_left_pad"
                android:text="1"
                android:textSize="@dimen/default_text_size" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="@dimen/trip_review_text_view_size"
                android:layout_height="wrap_content"
                android:text="@string/mpg"
                android:textSize="@dimen/default_text_size" />

            <TextView
                android:id="@+id/tripReview_mpg"
                android:layout_width="@dimen/trip_review_text_view_size"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/trip_review_text_left_pad"
                android:text="3.5"
                android:textSize="@dimen/default_text_size" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="@dimen/trip_review_text_view_size"
                android:layout_height="wrap_content"
                android:text="@string/avg_speed"
                android:textSize="@dimen/default_text_size" />

            <TextView
                android:id="@+id/tripReview_speed"
                android:layout_width="@dimen/trip_review_text_view_size"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/trip_review_text_left_pad"
                android:text="57 mph"
                android:textSize="@dimen/default_text_size" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="@dimen/trip_review_text_view_size"
                android:layout_height="wrap_content"
                android:text="@string/driver"
                android:textSize="@dimen/default_text_size" />

            <TextView
                android:id="@+id/driver_name"
                android:layout_width="@dimen/trip_review_text_view_size"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/trip_review_text_left_pad"
                android:text="Payden Beyer"
                android:textSize="@dimen/default_text_size" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="@dimen/trip_review_text_view_size"
                android:layout_height="wrap_content"
                android:text="@string/verified"
                android:textSize="@dimen/default_text_size" />

            <TextView
                android:id="@+id/verified"
                android:layout_width="@dimen/trip_review_text_view_size"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/trip_review_text_left_pad"
                android:text="No"
                android:textSize="@dimen/default_text_size" />

        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/notate_btn"
        android:layout_width="@dimen/main_activity_btn_size"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tableLayout"
        android:layout_marginLeft="@dimen/trip_review_btn_horiz_margin"
        android:layout_marginStart="@dimen/trip_review_btn_horiz_margin"
        android:text="@string/notate"
        android:textSize="@dimen/default_text_size" />

    <Button
        android:id="@+id/details_btn"
        android:layout_width="@dimen/main_activity_btn_size"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tableLayout"
        android:layout_marginEnd="@dimen/trip_review_btn_horiz_margin"
        android:layout_marginRight="@dimen/trip_review_btn_horiz_margin"
        android:text="@string/details"
        android:textSize="@dimen/default_text_size" />

    <Button
        android:id="@+id/cancel_btn"
        android:layout_width="@dimen/main_activity_btn_size"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/notate_btn"
        android:layout_alignStart="@+id/notate_btn"
        android:layout_below="@+id/notate_btn"
        android:text="@android:string/cancel"
        android:textSize="@dimen/default_text_size" />

    <Button
        android:id="@+id/verify_btn"
        android:layout_width="@dimen/main_activity_btn_size"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/details_btn"
        android:layout_alignStart="@+id/details_btn"
        android:layout_below="@+id/details_btn"
        android:text="@string/verify"
        android:textSize="@dimen/default_text_size" />

</RelativeLayout>
